fix the padding on the first page -top and add a feature of the abstract to show when hover and fix the selector not align in moblie verson

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -29,7 +29,7 @@ body {
         justify-content: center;
         flex-direction: row;
         padding-bottom: 1.8rem;
-        padding-top: 6rem;
+        // padding-top: 6rem;
     }
     @include desktop {
         justify-content: flex-start;
@@ -172,6 +172,7 @@ select {
         }
         .text-block {
             padding-bottom: 0.5rem;
+            transform:translateY(0);
         }
     }
     @include tablet {
@@ -197,6 +198,7 @@ select {
     padding: 0 0.4rem 0 0.4rem;
     width: 100%;
     transition: 0.3s;
+    transform:translateY(100%);
     p {
         line-height: 1.5rem;
     }
