--- a/sass/partials/_selectric.scss
+++ b/sass/partials/_selectric.scss
@@ -8,6 +8,9 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    .selectric-items{
+        left:auto;
+    }
 }
 
 .selectric {
